Added interfaces and fixed some sonarcube errors