@@ -12,10 +12,11 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class DashboardService {
+public class DashboardService implements DashboardServiceInterface {
 
     private final TicketRepo ticketRepo;
     private final TicketActivityRepo activityRepo;
@@ -57,6 +58,6 @@ public class DashboardService {
                         activity.getTicket().getTitle(),
                         activity.getCreatedAt()
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
